@@ -1,24 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX 50org-mode-gentoo.el 154 RMD160 060ffddc24394dd5770849d7d995ab32cbe56832 SHA1 aaec6e13e75de08321d6fc91e60c8fb399ba68c7 SHA256 70a5fe5c6ae677fd9cbeb8258857867c41e2067b048ef2aeef62976db27a044e
-EBUILD org-mode-9999.ebuild 1752 RMD160 57387981bfb24ff7ec4ec65ff3027688b733f4db SHA1 c9c520b62c84790b0e441546e56b9a7a736b71f8 SHA256 15c9bee7c04ae59027561ca8744b7236f93fc5305358a61c7b64f60dffcb80c4
-MISC ChangeLog 859 RMD160 b71e113c13ab81865f0afb80fdcb2605b6f8fed7 SHA1 59b390c6fcf69c1a67f67204ecf0ede8e8a9a2d3 SHA256 2db2ca3ed182499666dd41185e87dcd09881f67e9ddab6256260200ef3bd437d
-MISC metadata.xml 1146 RMD160 cd7f3b1f135d9a4483ee2fc6b039370504b8f894 SHA1 adb78dce5a2849ff934805fcc881e82cb2f8574c SHA256 bd68dc6ea0c238afb569ed5108af4b3e53c5e7fab7e7cfcc1f3c6fff0f4ac447
+AUX 50org-mode-gentoo.el 154 SHA256 70a5fe5c6ae677fd9cbeb8258857867c41e2067b048ef2aeef62976db27a044e SHA512 852c9843419a70bbe74ac0115d0e9a5b4208fe231dcf5bfe69712d692fdf9f581dd252c04e5485f181b7bdfb3ee5171790749f412b4505171fc42b1c756a0457 WHIRLPOOL d0a0fc9701842fcf6a56e18c3818ecca17734b653d28e6dd032c01b41a24e69bf6277abb0cf15b24b1f500042c1bfcc5d54a647423bbb805dc8a4bd89809effd
+EBUILD org-mode-9999.ebuild 1613 SHA256 40df5a8d56c135214fbf3064e90685cf7c682180404918114865e01be4b013a8 SHA512 dadd7ba71d7c3ecf195aa33050858c8b58e0a5cb03f75dcdf6d536751b2dc720235eb63e14a72ca777802b4e0bec160f4dd8b73e6de720b9312e83e51043ceeb WHIRLPOOL c7cca2b6481c1abe756eabfbd5eb795704801608103b4cd30c4861aec7d9e8f8984153731ae09f468a39b894898f38dc407865e6ab2dd83af81bfb692c5aaf99
+MISC ChangeLog 971 SHA256 5222a3902480e7882a7d5de12f795ad2f32dab1cd96c6306c54351ec8438419a SHA512 0ad7e8471e5f1fcdefd7769cd704fdefef3cd3ba5e94971bad7966f684fa8c27d9356ee16dd86407c4ce40c667e3644b379cb1e2417257920fe72a9669e724b2 WHIRLPOOL fdb609c8c620cd4ca075f3b86abcf92a82cab2aea42930275763ca381554720a2903903d9c174eaacece8d813b0e934347b8a566f69b6140edbed898ff341077
+MISC metadata.xml 1244 SHA256 11da2d6f729e004b19eafd7ccd15fc3b50a41656ab0ebdfb825dee300f569bbf SHA512 8ca51e3e3b8aa4a982fefcaea22b0d19d5c60a35227f97acf097b998ec64ad0a2cb7deaddbdc0004c37eaffe7574dd9fde8fe03f21abdffe1599d1c69cc50aff WHIRLPOOL 993654e26f11dc38cc284008364b71d10a46ae42ebb4f308a6a64e6cdfd22dbb44f597d199fabf6c8303ef21c6529c50652274e939358da1131c19f198a470d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPzoZ0AAoJEDxpGckxwJCBWDEP/1NOaxtd2IckYSHS05NKQuCg
-o2GYje/t55Zw7VVyAyHqrxnILoUaYWV6GN0hxP3PI2RIrlawI32t8huMwO4mT1cz
-RBwRvWvYXjXqyVWIHSCYcgmd1O6lfFMovdIqg4LFDBeh1X4MDU7XLF+taWEkaUzS
-IBwqWoxlZVjBlTbtXE39ae6KanSAsiGCYqkFXvfknY9C85c+L42JWcavMU9gm982
-QbTgKB9MQaZPO+kfk15pN08yj89cdj2cQSWrFFyFvMXJfyp5OpoZH3BM8kRl+vwD
-25w69MKlZnjxEfEe+Qn/Dt8pERuqDhkkB+8X+NcE4B7anQY62dWbuky8qLyKQAsE
-CkhR9az6hFDZEhucpxWKkhYy0gcarH6DFooewVOyChahOKaAFDvn39bjHT1ukyIr
-+ly0hpA1Ng4ENDIuniA62ajM30LaMNmwwFNFVtrm40OJzIoTVvo1Jv5+nKZ6H6Ru
-SezmcjQrWb8CM+3vOwxlXUYoQxzE8FzaK15a+F8zH5ryfJDFaOjfv7WezKUGfEqM
-/fC8Q7f6QAQbbF7S444M7a/EVYPiKFrd9Mbre+m6KEL7eWJ2JxUyz9r+aNq4+kRw
-Vx7HG2w/GP/mDRiAXfiisHvYkcw5Jm1EVTU4WxndAJzuFkUV50UCBXgYiWSzd8hR
-tBr+QMpfuX4GMpL104rO
-=TMOD
+iQIcBAEBCAAGBQJQbf2lAAoJEDxpGckxwJCBpdEQAKgcIS2bVedfre26EwS2b6Rq
+WGFx3jHKRaRNNu4ikgL8fgphUDfeZ5lkWn3Ec6frHXW8MlpVQhRNDlKuGg8m64bz
+39/6b5jXFftD7+0ThwGltudak9NWJ2FGKXGs/quttrhIOw6uGXW8P3fDURG58Bqf
+iKXrChDr22b1UT5rgk5dp6ES5LKjoiGYLjI5VgsIWB+T8UGjo3WzdFb39QY85GP2
+Jem/2jlHqz7zOf4ZYASmPnryd7ANHwBX+9yKYPgxWf/o1W61Cb6yV6wiw5skqZ0Y
+orwbxjyJHm4nNvzJ/yI0wPCpBoz3NOgdXwV1WlWS0b5SkgIaAaC4Ky0oSh2k6Nwc
+y4FTcdcj87+4j0mOkaWMCuoN9fjCaSouxGHdkBgLg/qdW+1q21woM3+ruemedtfl
+esml2DrMFkuy2SapGM9slAagf4c/79755alB7VlMkK38do6eZrRYFhBCrpUIpq3p
+LYnzM28HsaVXcaVpOtdL8s9VfUdV8Ig0sEdlo5wtsMHW0ep8MujtaZE2JwGQEUjt
+otZf/5prceihvwRRNEM8m2Jwo04dIaYvb7CPzkhgBdKh1j5SNc46rssKWI6mmTPd
+0YZIqeZIfqVokYAmqW9P9lF2JROm5zT4dINyzUFS8tRniUEM9TKswwGrzadO+J39
+mhlxu7dDX+5NsNue19gJ
+=dQZA
 -----END PGP SIGNATURE-----
