@@ -19,5 +19,7 @@
 </longdescription>
 <use>
   <flag name='contrib'>Install user-contributed files</flag>
+  <flag name='odt-schema'>Install non-free schema files
+    for OpenDocument Text exporter</flag>
 </use>
 </pkgmetadata>
