@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Oct 2012; Ulrich Müller <ulm@gentoo.org> org-mode-9999.ebuild,
+  metadata.xml:
+  Sync from Portage tree.
+
   05 Jun 2012; Ulrich Müller <ulm@gentoo.org> org-mode-9999.ebuild:
   Don't try to install files no longer present, bug 419817.
 
